src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#floorp {
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  grid-template-rows: 2fr 1fr 2fr;
}

div {
  border: 1px solid grey;
  margin: 5px;
  padding: 5px;
}

.livingroom{
  background-color: #EFE7BC;
  display: grid;
  grid-row: 1/3;
  grid-column: 3/4;
  
}
.kitchen {
  grid-template-columns: 1fr 1fr;
  grid-row: 1/3;
  grid-column: 4/5;
  height: 200px;
  width: 100px;
  background-color: #FFA384;

}
#kitch{
  display: flex-end;
  text-align: center;
}
.sink{
  background-color: #B5E5CF;
  display: flex;
  align-self: flex-start;
}
.oven {
  background-color: #543855;
  color: #EFE7BC;
  display: flex;
  align-self: flex-start;
}

.bedroom {
  background-color: #658EA9;

}
#bedroom-1{
  display: grid;


}
.bath {
  background-color: #74BDCB;
}

